#25543: PTM Cluster quantitation, take into account only quant peptide with selection level (global & local) >= 2 Add Performanace trace for PTM Cluster loading & improve it DataBoxPTMClusters use QuantitationMethod instead of XicResult boolean Add Quant Selelection Level in PTM Cluster's Peptide table